--- a/index.html
+++ b/index.html
@@ -19,22 +19,26 @@
     <div class="row">
       <div class="col-lg-12">
         <!-- div to display time remaining -->
-        TIMER GOES HERE
+        <div id="timer">TIMER GOES HERE
+        </div>
+       
       </div>
     </div>
 
     <div class="row">
       <div class="col-lg-12">
-            <!-- div for question -->
-            QUESTION GOES HERE
+        <div id="question">QUESTION GOES HERE
+        </div>
+            <!-- div for question -->           
       </div>
     </div>
 
-    <div class="row">
-      <div class="start">
-        ** START BUTTON **
-      </div>
-    </div>
+    <!-- <div class="row"> -->
+      <!-- <div class="start-box text-center"> -->
+            <button id="start-btn"><h2>Start</h2></button>
+
+      <!-- </div> -->
+    <!-- </div> -->
 
     <div id="answer-block">
     <div class="row">
@@ -48,15 +52,115 @@
     </div>
     </div>
   </div>
+  <!-- end HTML block -->
+  <!-- *** begin Javascript *** -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type = "text/javascript">
-$(document).ready(function(){
-    $("h2").on("click", function(){
-      alert("You clicked an H2.");
-    });
-  });
 
+// begin program 
+// start with hiding all fields except h1 and start button
+
+var timeLimit = 10;
+var intervalId;
+var started = false;
+var setDelayRestart;
+
+// $(document).ready(function(){
+
+//   on click, hide start button & display features of game  
+
+// $("p").click(function(){
+//     $(this).fadeOut();
+// });
+
+$("#start-btn").click(function(){
+  console.log("Inside the start block");
+
+  $("#start-btn").hide();
+  $("#timer").css("visibility", "visible");
+  $("#question").css("visibility","visible");
+  $("#answer-block").css("visibility","visible");
+  started = true;
+  console.log ("Leaving startblock with started = "+started);
+
+  triviaGame();
+
+
+});  // end onClick event // end of Program ?? 
+
+// ****** BEGIN FUNCTIONS BELOW ******
+  function resetGame(){
+    console.log("In function resetGame");
+  }
+
+  function triviaGame(){
+    console.log("In the triviaGame function");
+    console.log(started);
+
+if (started==true) {
+    console.log(started);
+    clearInterval(intervalId);
+    intervalId = setInterval(decrement, 1000);  
+
+ 
+    // setTimeout(displayImage, 1000);
+}
+  } // end function triviaGame
+
+
+  function decrement() {
+    console.log("In decrement function");
+    timeLimit --;
+    console.log(timeLimit);
+    $("#timer").html("<h2>"+"Time remaining: " + timeLimit + " Seconds"+"<h2>");
+
+    if (timeLimit==0) {       
+        alert("Timer has stopped.");
+        stop();
+    }
+  }  // end function decrement
+
+  function stop() {
+//  Clears our intervalId
+//  We just pass the name of the interval
+//  to the clearInterval function.
+  clearInterval(intervalId);
+  $("#timer").html("<h2>"+"Time remaining: 10 Seconds"+"<h2>");
+  console.log("In stop function - after .html line");
+
+  setDelayRestart = setTimeout(function() {
+        
+    alert("Alert #2: Called 3 seconds after the start button is clicked.");
+        }, 3000);
+        // console.log("Inside the start block");
+
+
+  } // end function stop
+
+
+
+
+//     $("#time-left").append("<h2>Time's Up!</h2>");
+
+
+
+
+
+// $("#start-btn").on("click", triviaGame);  
+
+// $(".start").click(startSlideshow);
+// $("#start-btn").click(triviaGame);
+// $("h3").click(triviaGame);
+   
+//   $("#show").click(function(){
+//     $("p").show();
+//   });
+// });
+// $(document).ready(function(){
+//     $("h3").on("click", function(){
+//   alert("You clicked an answer. And now you're in the triviaGame function.");
+//     });
 
 </script>  
 </body>
