changed order of answers for 1 question

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ var trivia = [
     clip: "assets/images/The_Who_resized_200_200.gif"},
   
    {question: "Which person is NOT a memeber of Pearl Jam?",
-    answers:  ["Chris Cornell","Eddie Vedder","Mike McCready","Stone Gossard"], 
+    answers:  ["Mike McCready","Eddie Vedder","Chris Cornell","Stone Gossard"], 
     rightAnswer: "Chris Cornell",
     clip: "assets/images/Pearl_Jam_resized_200_200.gif"}, 
     
