order of answers changed again

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ var setDelayRestart;
 var playCount = 0;
 var trivia = [
   [{question: "Who was the lead singer of Led Zeppelin?",
-    answers: ["Robert Plant", "Jimmy Page", "Roger Daltry", "Eric Clapton"],
+    answers: ["Eric Clapton", "Jimmy Page", "Roger Daltry", "Robert Plant"],
     rightAnswer: "Robert Plant",
     clip: "assets/images/RB_resized_200_200.gif"},
 
