--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type = "text/javascript">
 // begin program with variable declarations
-var timeLimit = 11;
-var intervalId;
-var started = false;
-var setDelayRestart;
-var playCount = 0;
+
 var trivia = [
   [{question: "Who was the lead singer of Led Zeppelin?",
     answers: ["Eric Clapton", "Jimmy Page", "Roger Daltry", "Robert Plant"],
@@ -140,12 +136,18 @@ var trivia = [
     rightAnswer:"Minecraft",
     clip: "assets/images/Minecraft_200_200.gif"}
   ]];
-
+var started = true;
+var intervalId;
+var setDelayRestart;
+var totalCorrect = 0;
+var totalIncorrect = 0;
+var totalUnanswered = 0;
 var correctGuess = 0;
 var incorrectGuess = 0;
 var noGuess = 0;
-var started = true; 
-questionCount = 0;
+var timeLimit = 11;
+var playCount = 0;
+var questionCount = 0;
 
 // ***** Begin program **********************************
 // Start with hiding all fields except h1 and start button
@@ -166,7 +168,7 @@ $("#start-btn").click(function(){
 
     if (questionCount === trivia[playCount].length) { 
       console.log("Showed the last video"); 
-      clearInterval(intervalId);  // STOP GAME FOR NOW  
+      clearInterval(intervalId);  // Stop Timer 
       $("#image-block").empty();  // clear out image div
         //
       $("#answer-block").css("visibility","visible");
@@ -174,7 +176,6 @@ $("#start-btn").click(function(){
       $("#question").html("<b>All done, here's how you did!<b>");
         // Re-use choice-id's to display final stats; only 3 lines needed 
         // Hide choice4 and empty 1-3
-      // $("#timer").html("<h2>"+"Time remaining: " + timeLimit + " Seconds"+"<h2>"); 
       $("#timer").hide();
       $("#choice4").css("visibility","hidden");
       $("#choice1").empty();
@@ -185,15 +186,21 @@ $("#start-btn").click(function(){
       $("#choice2").html("Incorrect Answers: "+incorrectGuess);
       $("#choice3").html("Unanswered: "+noGuess);
       $("#playAgain-btn").show();
+      totalCorrect = totalCorrect + correctGuess;
+      totalIncorrect = totalIncorrect + incorrectGuess;
+      totalUnanswered = totalUnanswered + noGuess;
+
+    
 
       $("#playAgain").click(function(){        
-      console.log ("playCount = "+playCount);
-      console.log ("trivia length = "+trivia[playCount].length);
+
       if (playCount == trivia.length-1){
         // end game (put up a sign, no more questions)
-        console.log ("Inside if statment -- end of playAgain");
         $("#question").html("<b>Sorry that's the end. Thanks for playing!<b>");
         $("#bye").html("BYE BYE");
+        $("#choice1").html("   Total Correct: "+totalCorrect);
+        $("#choice2").html(" Total Incorrect: "+totalIncorrect);
+        $("#choice3").html("Total Unanswered: "+totalUnanswered);    
         }
       else {
        playCount ++;
